--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,7 +1,21 @@
-.header  {
-  font-family: monospace;
-  background: papayawhip;
+html {
+  box-sizing: border-box;
 }
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+.header  {
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background: papayawhip;
+  display: flex;
+  margin: 10px;
+  justify-content: space-between;
+  align-items: center;
+  }
 
 .logo {
   font-size: 48px;
@@ -9,12 +23,17 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px 0;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-}
+  display:flex;
+  /* outline: 0.5px solid black; */
+  gap: 10px;
+  margin: 10px;
+  } 
 
 a {
   font-size: 22px;
