--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,28 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.main-content {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
 }
 
 img {
@@ -7,10 +30,17 @@ img {
   height: 100px;
 }
 
-.title {
-  font-size: 36px;
-  font-weight: 900;
+.items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
 }
+
+.text {
+  text-align: center;
+}
+
 
 /* do not edit this footer */
 .footer {
