--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,3 +1,14 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0px;
+  padding: 0px;
+  /* outline: 0.5px solid black; */
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
@@ -5,7 +16,43 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  }
+
+a {
+  text-decoration: none;
+  font-size: 0.9em;
+  color: grey;
+  font-weight: bold;
 }
+
+.master-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  min-height: 100vh;
+  }
+
+li {
+  list-style: none;
+}
+
+/* Header */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  align-items: center;
+  }
+
+.header ul {
+  display: flex;
+  gap: 20px;
+}
+
+
+
+/* Content */
 
 img {
   width: 600px;
@@ -16,6 +63,10 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  margin: 0px 10px;
+  padding: 8px;
+  color: rgb(27, 27, 27);
+  font-weight: bolder;
 }
 
 input {
@@ -23,4 +74,29 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  margin-top:10px;
+  }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex:1;
+  gap: 10px;
+  justify-content: center;
+  }
+
+/* Footer */
+
+.footer {
+  display:flex;
+  justify-content: space-between;
+  padding: 5px;
+  align-items: center;
+  background-color: lightgrey;
+}
+
+.footer ul {
+  display: flex;
+  gap: 20px;
 }
