--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,113 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0px;
+  padding: 0px;
+  /* outline: 0.5px solid black; */
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
+
+/* Header */
+
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
-}
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 0.5em;
+  }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
-}
+/* Main wrapper */
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+  }
+
+
+
+  /* Content wrapper */
+.content-wrapper {
+  display:flex;
+  flex:1;
+  }
+
+/* Sidebar */
+
+.sidebar ul {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 16px;
+  gap: 1.5em;
+  }
 
 .sidebar {
-  width: 300px;
+  min-width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  }
+
+li {
+  list-style: none;
 }
+
+.sidebar a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+  display: flex;
+  align-items: center;
+  }
+
+  .sidebar a span {
+    display: inline-block;
+    width:35px;
+    text-align: center;
+  }
+
+  /* Content boxes */
+
+.content-boxes {
+  display: flex;
+  /* align-items: flex-start; */
+  flex-wrap:wrap;
+  gap: 30px;
+  padding: 48px;
+  }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  /* height: 400px; */
+  padding: 20px;
+  
+}
+
+
+
+
+/* Footer */
+
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
